feat: 添加公司卡牌 MY-CORP-10 - 远见科技（Foresight Technologies）
- 类型：公司卡牌，起始资金 48 M€，标签为 SCIENCE
- 公司能力：行动 - 查看牌堆底部最多 10 张牌（不取出，仅限私有查看）
- 实现了行动可用性判定（需牌堆中至少有 1 张牌）
- 支持显示牌堆剩余牌数不满 10 张时的处理逻辑
- 完善了卡牌渲染（起始资源、行动框）、中英文描述支持

--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -59,6 +59,11 @@
   "RAINBOW PARK": "彩虹乐园",
   "have": "拥有",
   "Action: Gain M€ equal to the number of different resource types you have.": "行动：获得等同于你当前拥有的不同资源种类数量的 M€。",
-  "${0} took ${1} action and gained ${2} M€.": "${0} 执行了 ${1} 的行动，获得了 ${2} M€。"
+  "${0} took ${1} action and gained ${2} M€.": "${0} 执行了 ${1} 的行动，获得了 ${2} M€。",
+
+  "Foresight Technologies": "远见科技",
+  "FORESIGHT TECHNOLOGIES": "远见科技",
+  "look at": "查看",
+  "Action: Look at the top 10 cards of the deck.": "行动：查看牌堆顶的 10 张牌。"
 
 }
