feat: 添加公司卡牌 RB-CORP-01 - Arklight Rebalanced
- 类型：公司卡牌，起始资金 45 M€，标签为动物（Animal）
- 公司能力：
  - 当你打出动物或植物标签时，增加1个动物资源到此卡
  - 新增效果：当在任意卡上获得动物资源时，获得等量 M€
- 实现了 onResourceAdded 钩子，支持“获得动物资源时获得1 M€”效果
- 添加了卡牌渲染（LOGO、说明文本）及中英文本地化支持
- 更新卡牌注册，替换旧版 Arklight 为 Rebalanced 版本

--- a/src/locales/cn/rebalanced_corporations.json
+++ b/src/locales/cn/rebalanced_corporations.json
@@ -1,2 +1,10 @@
 {
+  "Arklight_Rebalanced": "Arklight",
+  "ARKLIGHT_REBALANCED": "ARKLIGHT",
+  "Arklight Rebalanced": "Arklight",
+  "ARKLIGHT REBALANCED": "ARKLIGHT",
+  "You start with 45 M€. Increase your M€ production 2 steps. 1 VP per 2 animals on this card.": "你起始获得45M€，提升你的M€产量2级。牌上每2个动物资源1分。",
+  "Effect: When you play an animal or plant tag, including this, add 1 animal to this card.": "效果：当你打出1个动物标志或植物标志(包括本牌)时，增加1个动物资源到本卡。",
+  "Effect: When you gain an animal to ANY CARD, gain 1 M€.": "效果：当你在任意卡上增加1个动物资源时，获得1M€。",
+
 }
