feat: 添加公司卡牌 RB-CORP-02 - Interplanetary Cinematics Rebalanced
- 基于原版公司 Interplanetary Cinematics 进行重制，改动内容如下：

- 卡牌效果改动

  - 起始资金由 30 M€ + 20 钢铁 调整为 60 M€
  - 公司能力修改为：
    - 你的事件卡始终以正面朝上置入游戏，其标签持续生效（视为自动效果卡）
    - 每当你打出一张事件卡，获得 2 M€

- 核心逻辑更新

  - 调整 Tags 统计逻辑，复用 Odyssey 的处理方式，使 INTERPLANETARY_CINEMATICS_REBALANCED 也将事件卡标签计入统计

- 其他改动

  - 添加重制版卡牌的渲染数据及中英文描述
  - 在 CardCorporationLogo 组件中增加重制版公司标志支持
  - 在 RebalancedCardManifest 中注册该卡，并移除原版 Interplanetary Cinematics 卡牌

--- a/src/locales/cn/rebalanced_corporations.json
+++ b/src/locales/cn/rebalanced_corporations.json
@@ -7,4 +7,13 @@
   "Effect: When you play an animal or plant tag, including this, add 1 animal to this card.": "效果：当你打出1个动物标志或植物标志(包括本牌)时，增加1个动物资源到本卡。",
   "Effect: When you gain an animal to ANY CARD, gain 1 M€.": "效果：当你在任意卡上增加1个动物资源时，获得1M€。",
 
+  "Interplanetary_Cinematics_Rebalanced": "Interplanetary_Cinematics",
+  "INTERPLANETARY_CINEMATICS_REBALANCED": "INTERPLANETARY_CINEMATICS",
+  "Interplanetary Cinematics Rebalanced": "Interplanetary Cinematics",
+  "INTERPLANETARY CINEMATICS REBALANCED": "INTERPLANETARY CINEMATICS",
+  "You start with 60 M€.": "起始获得60M€。",
+  "up": "朝上",
+  "Effect: Your event cards stay face up, and their tags are in use as if those were automated (green) cards.": "效果：你的事件卡始终正面朝上，其标志持续生效（如同绿色自动化卡牌）。",
+  "Effect: Each time you play an event, you gain 2 M€.": "效果：当你打出1张事件卡时，获得2M€。"
+
 }
