--- a/src/locales/cn/pathfinder_preludes.json
+++ b/src/locales/cn/pathfinder_preludes.json
@@ -3,7 +3,7 @@
   "(Increase your M€ production 3 steps. Draw 2 cards with a microbe tag.)": "（将你的M€产能增加3。抽2张微生物牌。）",
 
   "Crew Training": "机组人员培训",
-  "(Choose a planet tag. This card counts as having 2 of that tag. Raise the planetary influence track accordingly. Gain 2 TR.)": "（选择一个行星标志，此卡视为两个行星标志。根据所选标志提升对应行星轨道。将你的改造度增加2。）",
+  "(Choose a planet tag. This card counts as having 2 of that tag. Raise the corresponding planetary track 2 steps. Gain 2 TR.)": "（选择一个行星标志，此卡视为两个行星标志。根据所选标志提升对应行星轨道。将你的改造度增加2。）",
 
   "Deep Space Operations": "深空操作",
   "(Gain 4 titanium. Draw 2 event cards with a space tag.)": "（获得4个钛合金资源。抽2张太空事件牌。）",
