--- a/src/locales/cn/promo_cards.json
+++ b/src/locales/cn/promo_cards.json
@@ -139,7 +139,7 @@
   "Requires that you have 2 greenery tiles. Increase plant production 1 step.": "需要你拥有2个绿化板块。提升1点植物产能。",
 
   "Meat Industry": "肉类工业",
-  "Effect: When you gain an animal to ANY CARD, gain 2 M€.": "效果：当你在任意卡牌获得动物资源时，获得2M€。",
+  "Effect: When you gain an animal to ANY CARD, gain 2 M€.": "效果：当你在任意卡上增加1个动物资源时，获得2M€。",
 
   "Meltworks": "熔融工厂",
   "Action: Spend 5 heat to gain 3 steel.": "行动：消耗5点热能资源，获得3个钢。",
