--- a/src/locales/cn/base_cards.json
+++ b/src/locales/cn/base_cards.json
@@ -17,33 +17,9 @@
 
   "Oxygen must be 6% or less.": "氧气必须在6%或者以下",
 
-  "Aerospace Mission": "航空航天任务",
-  "Place 2 colonies. Pay 14 M€.": "放置2个殖民地。支付14 M€。",
-
   "Executive Order": "行政命令",
   "PLAY": "打出",
   "Draw 4 global events. Play 1 as the CURRENT GLOBAL EVENT and discard the rest. Place 2 delegates in any party. Gain 10 M€.": "抽4张全球事件卡。选择其中1张作为当前全球事件，其余弃置。在任意政党放置2名代表。获得10 M€。",
-
-  "By-Election": "补选",
-  "set ruling party": "设置执政党",
-  "Set the ruling party to one of your choice. Gain 1 influence.": "将执政党设置为你选择的任意政党。获得1点影响力。",
-
-  "Political Uprising": "政治动乱",
-  "Place 4 delegates in any parties. Draw a Turmoil card.": "在任意政党放置4名代表。抽1张动乱牌。",
-
-  "Research Grant": "研究资助",
-  "Gain 8 M€.": "获得8 M€。",
-
-  "Trade Advance": "贸易促进",
-  "[ solo": "[ 单人",
-  "Trade all colonies with": "与所有殖民地交易",
-  "Gain 2 M€ [SOLO: Gain 10 M€]. Immediately trade with all active colonies. You may increase the Colony Tile track 1 step before each of these trades.": "获得2 M€【单人游戏：获得10 M€】。立即与所有活跃殖民地交易。你可以在每次交易前使殖民地轨道前进1格。",
-
-  "Valuable Gases": "珍贵气体",
-  "Gain 6 M€. Play a Venus card from your hand and add 4 floaters to it.": "获得6 M€。从你手中打出1张金星牌，并在其上放置4个浮子。",
-
-  "Venus First": "金星优先",
-  "Raise Venus 2 steps. Draw 2 Venus cards from the deck.": "使金星上升2格。从牌堆抽2张金星牌。",
 
   "Inventors' Guild": "发明者指南",
   "Action: Look at the top card and either buy it or discard it": "行动：看看牌库顶上那张牌，要么买，要么丢弃",
@@ -170,7 +146,7 @@
   "Food Factory": "食品工厂",
   "Decrease your plant production 1 step and increase your M€ production 4 steps.": "植物产量-1，M€产量+4。",
 
-  "Archaebacteria": "古菌",
+  "ArchaeBacteria": "古细菌",
   "It must be -18 C or colder. Increase your plant production 1 step.": "需要火星温度至少低于-18度。增加你的植物产量1级。",
 
   "Carbonate Processing": "碳酸盐处理",
