feat: 实现三重协同公司红绿蓝套数统计及抽牌逻辑
- 在 TrisynInstitute.ts 中新增 updateTrisynSetCount 方法，
  用于计算玩家红绿蓝项目卡的最小套数并处理套数变动的抽牌与日志。
- AstraMechanica.ts 调用 updateTrisynSetCount 以应对事件卡回收导致套数变化。
- 增加日志信息，描述玩家X收集了X套红绿蓝，因三重协同效果抽牌。
- 扩展 mingyueData 支持保存三重协同相关数据（lastSetCount）。
- 本地化文件增加对应日志翻译条目。

--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -1,7 +1,9 @@
 {
-  "You start with 48 M€.":"起始获得48M€。",
-  "(Effect: After you play a project card, if this completes a new set of red, green, and blue project cards, draw 1 card.)":"（效果：当你打出项目卡后，若因此新凑齐一套红/绿/蓝项目卡，抽1张牌。）",
-  "(Action: Reveal and discard 2 cards to draw 1 card of a color not among the discarded ones.)":"（行动：展示并弃置2张牌，抽1张未被弃置颜色的牌。）",
+  "You start with 48 M€.": "起始获得48M€。",
+  "(Effect: After you play a project card, if this completes a new set of red, green, and blue project cards, draw 1 card.)": "（效果：当你打出项目卡后，若因此新凑齐一套红/绿/蓝项目卡，抽1张牌。）",
+  "(Action: Reveal and discard 2 cards to draw 1 card of a color not among the discarded ones.)": "（行动：展示并弃置2张牌，抽1张未被弃置颜色的牌。）",
+  "${0} collected ${1} red-green-blue sets, drew 1 card due to ${2} effect.": "${0} 收集了 ${1} 套红绿蓝，因 ${2} 效果摸了 1 张牌。",
+  "${0}'s red-green-blue set count decreased to ${1}.": "${0} 的红绿蓝套数减少到了 ${1}。",
 
   "Luna Chain": "连月",
   "(Effect: When the actual paid M€ of your current and previous project cards differ by X (X < 3), gain (3 - X) M€.)": "（效果：当你打出的项目卡实际支付的M€与上一张项目卡相差X(X<3)时，你获得(3-X)M€。）",
