feat: 支持公司轮抽阶段显示已选择的公司卡牌及第二公司卡牌
- 前端新增“Drafted Corporation Cards”区域，用于展示已选择的公司卡牌
- 支持展示第二公司卡牌（playerView.secondaryCorporationCard[0]）
- 后端序列化新增字段 secondaryCorporationCard 和 genericDraftedCards，完善数据支持

--- a/src/locales/cn/ui.json
+++ b/src/locales/cn/ui.json
@@ -1042,6 +1042,7 @@
   "Game Home": "游戏主页",
   "Send players their links below. As game administrator pick your link to use.": "请将名字上的链接复制给其他小伙伴进行游戏，如果你是游戏创建者请选择你的名字进行游戏",
   "Drafted Cards": "已选择卡牌",
+  "Drafted Corporation Cards": "已选择公司卡牌",
   "show": "看牌",
   "hide": "隐藏",
   "Game Log": "游戏记录",
