fix: 统一术语，将世界线航行者中的“round”替换为“turn”
- 将 WorldLineVoyager 卡牌效果文本中的“round”修改为“turn”

--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -30,11 +30,11 @@
   "α World Line": "α世界线",
   "β World Line": "β世界线",
   "α World Line ⇄ β World Line": "α世界线 ⇄ β世界线",
-  "(Effect: At the end of each round, you jump to another World Line (in the first round, you start in the β World Line).)": "（效果：每回合结束时，你跳跃至另一条世界线（首回合你处于β世界线）。）",
-  "α World Line: Base actions per round are 1, project card costs are reduced by 3 M€.": "α世界线：基础行动次数为1，项目卡费用减少3 M€。",
-  "β World Line: Base actions per round are 3, project card costs are increased by 1 M€.": "β世界线：基础行动次数为3，项目卡费用增加1 M€。",
-  "${0}'s ${1} has jumped to the β World Line. You can take 3 actions next round.": "${0} 的 ${1} 已跳跃到 β 世界线，下回合可进行 3 次行动。",
-  "${0}'s ${1} has jumped to the α World Line. You can take 1 action next round.": "${0} 的 ${1} 已跳跃到 α 世界线，下回合可进行 1 次行动。",
+  "(Effect: At the end of each turn, you jump to another World Line (in the first turn, you start in the β World Line).)": "（效果：每回合结束时，你跳跃至另一条世界线（首回合你处于β世界线）。）",
+  "α World Line: Base actions per turn are 1, project card costs are reduced by 3 M€.": "α世界线：基础行动次数为1，项目卡费用减少3 M€。",
+  "β World Line: Base actions per turn are 3, project card costs are increased by 1 M€.": "β世界线：基础行动次数为3，项目卡费用增加1 M€。",
+  "${0}'s ${1} has jumped to the β World Line. You can take 3 actions next turn.": "${0} 的 ${1} 已跳跃到 β 世界线，下回合可进行 3 次行动。",
+  "${0}'s ${1} has jumped to the α World Line. You can take 1 action next turn.": "${0} 的 ${1} 已跳跃到 α 世界线，下回合可进行 1 次行动。",
 
   "Infinity Circuit": "无限回路",
   "INFINITY CIRCUIT": "无限回路",
