feat: 优化 game 页面游戏配置展示，新增多项配置项显示支持
- 在 GameSetupDetail.vue 中补充显示以下游戏选项的图标与标签：
  - 明月扩展（mingyue）
  - 平衡性调整扩展（rebalanced）
  - 公司轮抽（corporationDraftVariant）
  - 七热升温（sevenHeatVariant）
  - 双公司模式（doubleCorpVariant）
- 移除已被图标代替的 Merger 显示（twoCorpsVariant）冗余项
- 为新选项添加对应样式类（.sevenHeat、.twoCorps、.doubleCorp），并指定颜色
- 更新 GameOptionsModel.ts、ServerModel.ts 等后端结构以支持新字段
- 中文语言包中将 “Initial” 译名从“回合初始”优化为“初始轮抽”

目的：使游戏主页配置项展示更完整、直观，便于玩家快速识别已启用的游戏模式和扩展。

--- a/src/locales/cn/game_setting.json
+++ b/src/locales/cn/game_setting.json
@@ -42,7 +42,7 @@
   "Please don't report anything but functional issues. ": "请仅报告功能问题，其他内容暂不受理。",
   "Draft:": "轮抽阶段：",
   "Research phase": "研究阶段（每时代）",
-  "Initial": "回合初始",
+  "Initial": "初始轮抽",
   "Turmoil:": "动荡事件：",
   "No negative Turmoil event": "禁用负面动荡事件",
   "Game configs:": "游戏其他配置：",
