feat: 添加公司卡牌 RB-CORP-05 - SolBank Rebalanced
- 基于原版公司 SolBank 进行重制，改动内容如下：

- 卡牌效果改动

  - 将“生产阶段：将所有数据转化为 M€” 修改为 “行动：将所有数据转化为 M€”

- 支持该重制卡的显示样式、卡名枚举、语言本地化与图标逻辑处理

--- a/src/locales/cn/colonies.json
+++ b/src/locales/cn/colonies.json
@@ -13,7 +13,7 @@
   "You start with 50 M€. Increase your M€ production 5 steps. Gain 5 titanium.": "起始获得50 M€。提升你的M€产量5级,获得5个钛",
   "Effect: When you buy a card to hand, pay 5M€ instead of 3, including the starting hand.": "效果：当你购买手牌时,你需要支付5 M€而非原本的3 M€,包括起始的手牌",
 
-  "Poseidon": "Poseidon",
+  "Poseidon": "波塞冬",
   "You start with 45 M€. As your first action, place a colony.": "起始获得45 M€。作为你的第一个行动,放置一个殖民地",
   "Effect: When any colony is placed, including this, raise your M€ production 1 step.": "任何殖民地放置时，包括这个，增加你的M€产量1级。",
 
