feat: 添加公司卡牌 RB-CORP-06 - Odyssey Rebalanced
- 基于原版公司 Odyssey 进行重制，改动内容如下：

- 卡牌效果改动
  - 将“支付费用重新打出一张事件卡”改为“免费重新打出一张事件卡”

- 支持该重制卡的显示样式、卡名枚举、语言本地化与图标逻辑处理

--- a/src/locales/cn/rebalanced_corporations.json
+++ b/src/locales/cn/rebalanced_corporations.json
@@ -34,5 +34,11 @@
   "SOLBANK_REBALANCED": "SOLBANK",
   "SolBank Rebalanced": "SolBank",
   "SOLBANK REBALANCED": "SOLBANK",
-  "Action: convert each data from this card into 1M€ each.": "行动：将此卡上的每个数据资源转换为1M€。"
+  "Action: convert each data from this card into 1M€ each.": "行动：将此卡上的每个数据资源转换为1M€。",
+
+  "Odyssey_Rebalanced": "Odyssey",
+  "ODYSSEY_REBALANCED": "ODYSSEY",
+  "Odyssey Rebalanced": "Odyssey",
+  "ODYSSEY REBALANCED": "ODYSSEY",
+  "Action: Play for free an event card you have already played that has a base cost of 16M€ or less (INCLUDING events that place special tiles,) after which discard that card.": "行动：你可以免费再次打出一张已打出的事件卡（费用至多为16M€，包括放置特殊板块的事件卡），然后丢弃这张事件卡。"
 }
