feat: 添加公司卡牌 RB-CORP-07 - Tycho Magnetics Rebalanced
- 基于原版公司 Tycho Magnetics 进行重制，改动内容如下：

- 卡牌效果改动
  - 原效果为：消耗任意电力抽等量卡牌，保留1张，其余弃置
  - 新效果为：仍消耗等量电力抽牌，保留1张，其余弃置（每额外消耗5点电力，不计首点，可额外保留1张）

- 支持该重制卡的显示样式、卡名枚举、语言本地化与图标逻辑处理

--- a/src/locales/cn/rebalanced_corporations.json
+++ b/src/locales/cn/rebalanced_corporations.json
@@ -40,5 +40,13 @@
   "ODYSSEY_REBALANCED": "ODYSSEY",
   "Odyssey Rebalanced": "Odyssey",
   "ODYSSEY REBALANCED": "ODYSSEY",
-  "Action: Play for free an event card you have already played that has a base cost of 16M€ or less (INCLUDING events that place special tiles,) after which discard that card.": "行动：你可以免费再次打出一张已打出的事件卡（费用至多为16M€，包括放置特殊板块的事件卡），然后丢弃这张事件卡。"
+  "Action: Play for free an event card you have already played that has a base cost of 16M€ or less (INCLUDING events that place special tiles,) after which discard that card.": "行动：你可以免费再次打出一张已打出的事件卡（费用至多为16M€，包括放置特殊板块的事件卡），然后丢弃这张事件卡。",
+
+  "Tycho_Magnetics_Rebalanced": "Tycho_Magnetics",
+  "TYCHO_MAGNETICS_REBALANCED": "TYCHO_MAGNETICS",
+  "Tycho Magnetics Rebalanced": "Tycho Magnetics",
+  "TYCHO MAGNETICS REBALANCED": "TYCHO MAGNETICS",
+  "You start with 42 M€, 1 energy and 1 energy production.": "起始获得42 M€，1点电力和1点电力产能。",
+  "Action: Spend any amount of energy to draw that many cards. Keep 1 and discard the rest. (For every additional 5 energy spent, excluding the first, you may keep 1 more.)": "行动：消耗任意数量的电力来抽取等量的卡牌，保留1张并弃置其余。（每额外消耗5点电力，不计首点，可额外保留1张。）"
+
 }
