--- a/src/locales/cn/ui.json
+++ b/src/locales/cn/ui.json
@@ -732,6 +732,7 @@
   "Select card to remove 2 Animal(s)": "选择卡牌移除2个动物",
   "Select card to remove 1 Microbe(s)": "选择卡牌移除1个微生物",
   "Select card to remove 1 microbe from": "选择卡牌移除1个微生物",
+  "Select card to remove 2 Microbe(s)": "选择卡牌移除2个微生物",
   "Select card to remove 1 Floater(s)": "选择卡牌移除1个云资源",
   "Select card to remove 3 Data(s)": "选择卡牌移除3个数据",
   "Select card to add microbe or animal": "选择卡牌添加微生物或动物",
