feat(card): 将 SponsoredResearchFirm 改写为继承 ActionCard
- 使用 ActionCard 基类，行为数据中新增 action 字段以实现抽卡
- 通过 behavior 字段提升 TR 1 步
- 通过重写 bespokeCanAct 实现只有当本代已提升 TR 时才可行动
- 优化卡牌行为逻辑，更符合行为数据驱动设计

--- a/src/locales/cn/chemical_cards.json
+++ b/src/locales/cn/chemical_cards.json
@@ -1,6 +1,6 @@
 {
   "Sponsored Research Firm": "资助研究机构",
-  "Requires 2 Earth tags. Raise your TR 1 steps.": "需要2个地球标志。提升1点改造度。",
+  "Requires 2 Earth tags. Raise your TR 1 step.": "需要2个地球标志。提升1点改造度。",
   "Action: If you have increased your TR this generation, draw 1 card.": "行动：若你本时代提升过改造度，则抽1张牌。",
 
   "Near-miss Rotary Asteroid": "掠轨旋转小行星",
