feat: 支持在 Solo 模式下同时执行多个已打出蓝卡的行动
- 新增 playMultipleActionCards 方法，允许玩家在 Solo 模式下选择多个可用的蓝卡并依次执行其行动。
- 该选项仅在 Solo 模式中启用，并添加至默认行动列表中。

--- a/src/locales/cn/ui.json
+++ b/src/locales/cn/ui.json
@@ -384,7 +384,9 @@
   "Take your next action": "行动阶段,执行一个合法行动",
   "Undo last action": "撤回操作",
   "End Turn": "结束本轮操作",
-  "Perform an action from a played card": "执行一个已打出卡牌上的行动",
+  "Perform an action from a played card": "执行一个已打出卡牌的行动",
+  "Perform multiple actions from played cards": "执行多个已打出卡牌的行动",
+  "Take action": "执行行动",
   "Power plant (11 M€)": "建造发电厂 (11 M€)",
   "Asteroid (14 M€)": "导引小行星 (14 M€)",
   "Aquifer (18 M€)": "开发含水层 (18 M€)",
