feat: 添加公司卡牌 RB-CORP-12 - Factorum Rebalanced
基于原版公司 Factorum 进行数值与效果重构，改动内容如下：

- 起始产量由「+1 钢铁」调整为「+1 钢铁、+1 能量」
- 修改公司行动效果：
  - 若你拥有最少的能量资源（允许并列），则获得 +1 能量产量
  - 若你拥有最多的钢铁资源（允许并列），则抽一张建筑牌
  - 若两个条件均满足，可选择其中之一执行

--- a/src/locales/cn/rebalanced_corporations.json
+++ b/src/locales/cn/rebalanced_corporations.json
@@ -76,6 +76,17 @@
   "MIDAS_REBALANCED": "MIDAS",
   "Midas Rebalanced": "Midas",
   "MIDAS REBALANCED": "MIDAS",
-  "You start with 100 M€. Lower your TR 4 steps.": "起始获得100 M€，降低4点改造度。"
+  "You start with 100 M€. Lower your TR 4 steps.": "起始获得100 M€，降低4点改造度。",
 
+  "Factorum_Rebalanced": "Factorum",
+  "FACTORUM_REBALANCED": "FACTORUM",
+  "Factorum Rebalanced": "Factorum",
+  "FACTORUM REBALANCED": "FACTORUM",
+  "You start with 37 M€. Increase your steel and energy production 1 step.": "起始获得37 M€，提升1点钢铁和电力产量。",
+  "least": "最少",
+  "most": "最多",
+  "Action: If you have (or are tied for) the least energy resources, Increase your energy production 1 step.": "行动：如果你拥有最少的电力资源（包括并列），提升1点电力产量。",
+  "Action: If you have (or are tied for) the most steel resources, draw a building card.": "行动：如果你拥有最多的钢铁资源（包括并列），抽1张建筑牌。",
+  "Increase your energy production 1 step": "提升1点电力产量",
+  "Draw a building card": "抽一张建筑牌"
 }
