--- a/src/locales/cn/base_cards.json
+++ b/src/locales/cn/base_cards.json
@@ -308,10 +308,10 @@
   "Bushes": "花丛",
   "Requires -10 C or warmer. Increase your plant production 2 steps. Gain 2 plants.": "需要至少-10度。增加你的植物产量2级，获得2个植物资源。",
 
-  "Mass Converter": "大规模转换器",
+  "Mass Converter": "质量转换器",
   "Requires 5 science tags. Increase your energy production 6 steps.": "需要5个科学标志。增加你的电力产量6级。",
 
-  "Physics Complex": "物理复杂性",
+  "Physics Complex": "物理中心",
   "Action: Spend 6 energy to add a science resource to this card.": "行动： 花费6个电力资源，放置一个资源在本卡。",
   "2 VP for each science resource on this card.": "本卡上每有1个资源，获得2分。",
 
@@ -710,10 +710,10 @@
   "Decrease your energy production 1 step and increase your M€ production 2 steps. Place a city tile on a VOLCANIC AREA regardless of adjacent cities.": "能量产量-1，M€产量+2。将城市放置在火山区域，无视相邻城市要求。",
   "Effect: When paying for a plant card, microbes here may be used as 2 M€ each.": "效果：支付植物牌时，此处的微生物每个可视为2 M€。",
   "Temperature must be -20 C or lower.": "温度必须为-20°C或更低。",
-  "Increase your energy production 1 step": "能量产量+1",
-  "Increase your energy production 2 steps": "增加你的电力产量2级。",
-  "Increase your energy production 3 steps": "能量产量+3",
-  "Increase your plant production 1 step": "增加你的植物产量1级",
+  "Increase your energy production 1 step": "提升1点电力产量",
+  "Increase your energy production 2 steps": "提升2点电力产量",
+  "Increase your energy production 3 steps": "提升3点电力产量",
+  "Increase your plant production 1 step": "提升1点植物产量",
   "Remove 2 microbes to raise temperature 1 step": "移除2个微生物，使温度上升1格",
   "Select card to add 2 microbes": "选择1张牌添加2个微生物",
   "Add microbes": "添加微生物",
