feat(card): 添加公司卡牌 R51 - Aristarchus
添加新公司卡牌 Aristarchus，编号 R51，初始资源为 33 M€，包含金星、地球、木星三种标签。

公司效果：
- 行动：如果你当前拥有的 M€ 恰好为 0，则可以获得 10 M€。

--- a/src/locales/cn/prelude_corporations.json
+++ b/src/locales/cn/prelude_corporations.json
@@ -10,7 +10,7 @@
   "POINT LUNA": "POINT LUNA",
   "Point Luna": "Point Luna",
   "Effect: When you play an Earth tag, including this, draw a card.": "效果：你打出的牌上每有一个地球符号，包括此卡，抽一张牌。",
-  "You start with 1 titanium production and 38 M€.": "你起始拥有1点钛产量和38 M€。",
+  "You start with 1 titanium production and 38 M€.": "你起始获得1点钛产量和38 M€。",
 
   "ROBINSON": "ROBINSON",
   "INDUSTRIES": "INDUSTRIES",
@@ -23,7 +23,7 @@
   "Valley Trust": "Valley Trust",
   "prel": "前序",
   "Effect: When you play a science tag, you pay 2M€ less for it.": "效果：你打出的牌上每有一个科学标志，你少为其支付2 M€。",
-  "You start with 37 M€. As your first action, draw 3 Prelude cards, and play one of them. Discard the other two.": "你起始拥有37 M€，作为游戏中的你的第一个行动，你必须抽三张前序卡，打出其中一张，然后弃掉剩余两张。",
+  "You start with 37 M€. As your first action, draw 3 Prelude cards, and play one of them. Discard the other two.": "你起始获得37 M€，作为游戏中的你的第一个行动，你必须抽三张前序卡，打出其中一张，然后弃掉剩余两张。",
 
   "VIT": "VIT",
   "O": "O",
