--- a/src/locales/cn/community_corporations.json
+++ b/src/locales/cn/community_corporations.json
@@ -8,7 +8,7 @@
   "Effect: You do not lose production when placing adjacent to hazard tiles.": "效果：与危险板块相邻放置时不损失产能。",
 
   "Curosity II": "Curosity II",
-  "You start with 40 M€ and 2 steel production.": "起始拥有40 M€和2钢铁产量",
+  "You start with 40 M€ and 2 steel production.": "起始获得40 M€和2钢铁产量",
   "Effect: When you place a tile on an area that has a RESOURCE placement bonus, or on top of another tile, you may pay 2 M€ to draw a card.": "效果：当你在一个有资源放置奖励的区域上放置一个板块，或将板块放置在另一个板块上，你可以支付2 M€来抽一张牌。",
 
   "Eris": "Eris",
@@ -16,14 +16,14 @@
   "Action: Place a new hazard tile adjacent to NO OTHER TILE, OR remove a hazard tile to gain 1 TR.": "行动：放置1个独立危险板块，或移除1个危险板块获得1TR",
 
   "Incite": "Incite",
-  "You start with 32 M€. As your first action, place two delegates in one party.": "起始拥有32 M€，作为第一个行动，放置2个代表到1个党派上。",
+  "You start with 32 M€. As your first action, place two delegates in one party.": "起始获得32 M€，作为第一个行动，放置2个代表到1个党派上。",
   "Effect: You have +1 influence. When you send a delegate using the lobbying action, you pay 2 M€ less for it.": "影响力始终+1，当你从储备区派遣代表时，少支付2 M€。",
 
   "Midas": "Midas",
   "You start with 120 M€. Lower your TR 7 steps.": "起始获得120 M€，降低7点改造度。",
 
   "Playwrights": "Playwrights",
-  "You start with 38 M€ and 1 energy production.": "起始拥有38 M€和1点电力产量。",
+  "You start with 38 M€ and 1 energy production.": "起始获得38 M€和1点电力产量。",
   "Action: Replay a played event from any player (INCLUDING events that place special tiles) by paying its cost ONLY in M€ (discounts and rebates apply), then REMOVE IT FROM PLAY.": "行动：仅用M€支付费用（可享折扣）重打任意玩家已打出的事件卡（含放置特殊板块事件），随后移出游戏",
 
   "Project Workshop": "Project Workshop",
@@ -36,5 +36,9 @@
 
   "UNITED NATIONS MISSION ONE": "UNITED NATIONS MISSION ONE",
   "You start with 39 M€. Increase your TR 1 step.": "起始获得39 M€，提升1级TR",
-  "Effect: When any player takes an action or plays a card that increases TR, including this, gain 1 M€ for each step.": "效果：任一玩家（含自己）执行提升TR的行动或卡牌时，每提升1级获得1M€"
+  "Effect: When any player takes an action or plays a card that increases TR, including this, gain 1 M€ for each step.": "效果：任一玩家（含自己）执行提升TR的行动或卡牌时，每提升1级获得1M€",
+
+  "Aristarchus": "Aristarchus",
+  "You start with 33 M€.": "起始获得33 M€。",
+  "Action: If you have exactly 0 M€, gain 10 M€.": "行动：如果你的M€为0，获得10M€。"
 }
