feat: 添加 MingYue 扩展卡牌 MY15–MY17 - 贫民窟、加班、偷猎者
- MY15: Slum - 降低电力产量1级，将城市板块放置在至少邻接1座城市的位置 （贫民窟）
- MY16: Overtime - 本回合额外执行两次行动 （加班）
- MY17: Poachers - 将任意卡牌上的1个资源转移至另一张具有相同资源类型且已有资源的卡牌 （偷猎者）

--- a/src/locales/cn/base_cards.json
+++ b/src/locales/cn/base_cards.json
@@ -389,7 +389,7 @@
   "Requires 3 or less ocean tiles.": "需要不多于3个海洋板块在场。",
 
   "Urbanized Area": "城市化区域",
-  "Decrease your energy production 1 step and increase your M€ production 2 steps. Place a city tile ADJACENT TO AT LEAST 2 OTHER CITY TILES.": "能量产量-1，M€产量+2。将城市放置在**至少邻接2座城市**的位置。",
+  "Decrease your energy production 1 step and increase your M€ production 2 steps. Place a city tile ADJACENT TO AT LEAST 2 OTHER CITY TILES.": "能量产量-1，M€产量+2。将城市放置在至少邻接2座城市的位置。",
 
   "Sabotage": "蓄意破坏",
   "Remove up to 3 titanium from any player, or 4 steel, or 7 M€.": "移除任一玩家的最多3个钛资源,或4个钢铁资源，或7 M€。",
