--- a/src/locales/cn/pathfinder_corporations.json
+++ b/src/locales/cn/pathfinder_corporations.json
@@ -41,7 +41,7 @@
 
   "Mars Maths": "火星数学",
   "(Effect: At the beginning of the Research phase, you draw 5 cards, but may STILL only buy 4 cards. If you are drafting, keep 2 cards for your first draft.)": "（效果：在研究阶段开始时，你抽取5张卡牌，但仍然只能购买4张卡牌。如果是轮抽模式，你可以在第一轮轮抽选择保留2张卡牌。）",
-  "(Action: Take another two actions this turn.)": "（行动：在本回合中额外执行两次行动。）",
+  "(Action: Take another two actions this turn.)": "（行动：本回合额外执行两次行动。）",
   "(You start with 40 M€. As your first action, draw 2 cards)": "（起始获得40M€。作为游戏的第一个行动，抽2张牌。）",
 
   "Martian Insurance Group": "火星保险集团",
