fix: 平衡性调整 Inventrix_Rebalanced 的参数修正步数由 2 改为 3
- Inventrix_Rebalanced：参数修正（Global Requirement Modifier）由原先的 ±2 步统一调整为 ±3 步

--- a/src/locales/cn/base_corporations.json
+++ b/src/locales/cn/base_corporations.json
@@ -30,7 +30,7 @@
   "INVENTRIX": "发明矩阵",
   "Inventrix": "发明矩阵",
   "As your first action in the game, draw 3 cards. Start with 45 M€.": "起始获得45 M€。作为你的第一个行动，抽3张牌。",
-  "Effect: Your temperature, oxygen, ocean, and Venus requirements are +2 or -2 steps, your choice in each case.": "效果：你打牌时的 温度/氧气浓度/海洋 要求 +2级或-2级。",
+  "Effect: Your temperature, oxygen, ocean, and Venus requirements are +2 or -2 steps, your choice in each case.": "效果：你打牌时的 温度/氧气/海洋/金星 要求 +2级或-2级。",
   "Draw 3 cards": "抽三张牌",
 
   "PhoboLog": "火卫一日志",
