feat: 完善偷猎者卡牌功能，统一描述并优化多人模式逻辑
- 更新 MY17 偷猎者（Poachers）：
  - 修改描述文本，使中英文一致：“转移资源至相同类型的卡牌”不再要求目标已有资源。
  - 重构 bespokePlay 和 bespokeCanPlay 实现：
    - 提取 getCardResourceTypes 辅助函数；
    - 单人模式支持选择卡牌或自动添加；
    - 多人模式按资源类型枚举一次性移除+添加的选项，每种类型仅提供一个操作选项；

--- a/src/locales/cn/mingyue_cards.json
+++ b/src/locales/cn/mingyue_cards.json
@@ -76,5 +76,5 @@
   "Take another two actions this turn.": "本回合额外执行两次行动。",
 
   "Poachers": "偷猎者",
-  "Move 1 resource from any card to another card with the same resource type that already has resources.": "将任意卡牌上的1个资源转移至另一张具有相同资源类型且已有资源的卡牌。"
+  "Move 1 resource from any card to another card with the same resource type.": "将任意卡牌上的1个资源转移至另一张具有相同资源类型的卡牌。"
 }
